# HITL-showdown

./: .gitignore  README.md
hitl_adk/: agent.py  arcade_calls.py  cb_main.py  main.py  pyproject.toml
hitl_adk/hitl-official-sample/: agent.py  hitl_official.py
hitl_adk/jit_permissions/: tools.py
hitl_langgraph/: main.py  pyproject.toml  scratch.py
hitl_oai/: hello.py  pyproject.toml
hitl_oai/jit_permissions/: tools.py
